GNOME Bugzilla – Bug 738230
vc1parser: fix level value for simple/main profile
Last modified: 2014-10-25 12:13:31 UTC
Currently the medium level and the high level are defined respectively to value 1 and 2 but the specification SMPTE 421M Annex J.1.2 defines these level to value 2 and 4. I also found that the expected value in the unit test when parsing sequence layer is not the right one.
Created attachment 288130 [details] [review] vc1parser: fix level values for simple/main profile Fix the define values in the vc1parser enum
Created attachment 288131 [details] [review] vc1parser: fix expected level in sequence-layer parsing unit test Fix the sequence-layer unit test.
commit 81c5fd3c1e96967f06aa9a78ca02bbcf314fefa3 Author: Aurélien Zanelli <aurelien.zanelli@parrot.com> Date: Thu Oct 9 15:12:01 2014 +0200 vc1parser: fix expected level in sequence-layer parsing unit test Sequence-layer used for unit test have a level set to 2 which should match the medium level, not the high. https://bugzilla.gnome.org/show_bug.cgi?id=738230 commit de327bf45bbf5fad4854ce6447c99b1f3e80ac80 Author: Aurélien Zanelli <aurelien.zanelli@parrot.com> Date: Thu Oct 9 15:05:55 2014 +0200 vc1parser: fix level values for simple/main profile In simple profile, level set to 0 or 2 indicate low and medium level respectively. In main profile, level set to 0, 2 or 4 indicate low, medium and high level respectively. Level values are defined in Annex J.1.2 of the SMPTE 421M. https://bugzilla.gnome.org/show_bug.cgi?id=738230